Fixed spacing issues between photoset images at mobile size

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -90,7 +90,12 @@
 	.push { height: 453px; }
 	
 	/* Photosets */
-	.photoset .span3 { width: 100%; margin-left: 0; }
+	.photoset-nav > li { margin-left: 20px; margin-bottom: 10px; }
+	.photoset { width: 100%; }
+	.photoset legend { margin-bottom: 0; }
+	.photoset .span3 { width: 100%; margin-left: 0; min-height: 0 !important; }
+	.photoset .span3 .photo-wrap { line-height: 0 !important; }
+	.photoset .span3 .photo-wrap img { max-width: 100%; }
 	.photoset .span3 .photo-desc { text-align: center; }
 
 }
@@ -109,7 +114,7 @@
 	#header-wrap { margin-left: -20px; }
 	#header h1.span4 { width: 100%; margin-left: 20px; }
 	#header h1.span4 a { float: none !important; }
-	#menu-wrap { margin-left: 0; width: 100%; padding: 20px 0; border-top: 1px solid #ddd }
+	#menu-wrap { margin-left: 0; width: 100%; padding: 20px 0; border-top: 1px solid #ddd; }
 	#header #header-menu li, #header-menu li { 
 		height: 35px;
 		float: none !important;
@@ -148,4 +153,9 @@
 	/* Text fields */
 	textarea, .ginput_container input[type="text"] { width: 100% !important; }
 	
+}
+
+@media (max-width: 320px) {
+	/* Photosets */
+	.photoset-nav > li:nth-child(4), .photoset-nav > li:nth-child(7) { margin-left: 0; }
 }
